--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,9 +14,19 @@ spec:
     spec:
       containers:
        - name: orca-pod
-         image: 022786159174.dkr.ecr.us-east-2.amazonaws.com/orca:0.0.1
+         image: 022786159174.dkr.ecr.us-east-2.amazonaws.com/orca:0.0.3
+         env:
+         - name: DB_PASS
+           valueFrom:
+             secretKeyRef:
+               name: psql-postgresql
+               key: postgresql-password
+         - name: DB_USER 
+           value: postgres 
+         - name: DB_HOST
+           value: psql-postgresql.orca.svc.cluster.local
          ports:
-         - containerPort: 3000
+         - containerPort: 80
          envFrom:
          - configMapRef:
              name: "orca-env-config"
